syntax = "proto3";

package blockscout.basicCache.v1;

option go_package = "github.com/blockscout/blockscout-rs/basic-cache";


service CacheService {
  rpc CreateSmartContract(CreateSmartContractRequest) returns (SmartContract) {}  
  rpc GetSmartContract(GetSmartContractRequest) returns (SmartContract) {}
}

// could not use struct for id because `actix-prost` cannot work with setting
// such parameters from query :((
//
// message SmartContractId {
//   string chain_id = 1;
//   string address = 2;
// }

message SourceFile {
  string name = 1;
  string content = 2;
}

message SmartContract {
  string url = 1;
  repeated SourceFile sources = 2;
}


message CreateSmartContractRequest {
  // identifier of a smart contract is (chain_id, address)
  string chain_id = 1;
  string address = 2;
  SmartContract smart_contract = 3;
}

message GetSmartContractRequest {
  // identifier of a smart contract is (chain_id, address)
  string chain_id = 1;
  string address = 2;
}
